--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@discordjs/opus": "^0.3.2",
     "@types/node": "^14.6.4",
     "axios": "^0.20.0",
+    "chalk": "^4.1.0",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "ffmpeg": "0.0.4",
