--- a/package.json
+++ b/package.json
@@ -18,19 +18,17 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
-    "@types/node": "^14.6.4",
     "axios": "^0.20.0",
     "chalk": "^4.1.0",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "ffmpeg": "0.0.4",
-    "ffmpeg-static": "^4.2.7",
-    "ini": "^1.3.5",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.2"
+    "ffmpeg-static": "^4.2.7"
   },
   "devDependencies": {
-    "@types/ini": "^1.3.30",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2",
+    "@types/node": "^14.6.4",
     "nodemon": "^2.0.4"
   }
 }
