Copying package.json and .env to the build folder

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node  -r ts-node/register ./src/bot.ts",
     "start:watch": "nodemon ./src/bot.ts",
-    "build": "tsc"
+    "build": "tsc && cp package.json .env ./radio.build"
   },
   "keywords": [
     "bot",
